#2 create text browser and fill with text & change color

--- a/formFiles/MainWindow.ui
+++ b/formFiles/MainWindow.ui
@@ -26,6 +26,9 @@
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
@@ -54,7 +57,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QTextBrowser" name="textBrowser"/>
+      <widget class="QTextBrowser" name="resultText"/>
      </item>
      <item>
       <widget class="QPushButton" name="startButton">
